--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Project">
-        <activity android:name=".activities.InfoCircuitActivity"></activity>
+        <activity android:name=".activities.InfoCircuitActivity" />
         <activity android:name=".activities.CircuitActivity" />
         <activity android:name=".activities.CompareActivity" />
         <activity android:name=".activities.InfoDriverActivity" />
